move templates out

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  &insert.pre;
+
   <title>HTMX / &backend; (same-thing)</title>
 </head>
 
 <body>
   hi
+
+  &insert.post;
 </body>
 
 </html>
